// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login credentials form on submit should display error when email is not filled 1`] = `
<p
  class="form-error"
>
  Email required
</p>
`;

exports[`Login credentials form on submit should display error when first name is not filled 1`] = `
<p
  class="form-error"
>
  First Name required
</p>
`;

exports[`Login credentials form on submit should display error when last name is not filled 1`] = `
<p
  class="form-error"
>
  Last Name required
</p>
`;
